--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,61 +1,5 @@
-<div class='row-fluid'>
-  <div class='span12'>
-    <div class='page-header'>
-      <h1>Administration Portal</h1>
-    </div>
-  </div>
-</div>
-<div class='row-fluid'>
-  <div class='tabbable'>
-    <ul class='nav nav-tabs'>
-      <li>
-        <a data-toggle='tab' href='#'>Dashboard</a>
-      </li>
-      <li class='active'>
-        <a data-toggle='tab' href='#'>Manage Products</a>
-      </li>
-      <li>
-        <a data-toggle='tab' href='#'>Manage Categories</a>
-      </li>
-      <li>
-        <a data-toggle='tab' href='#'>Admin Profile</a>
-      </li>
-    </ul>
-  </div>
-</div>
-<div class='row-fluid'>
-  <div class='span12'>
-    <div class='span6'>
-      <h3>Products</h3>
-    </div>
-    <div class='span6 header-button'>
-      <%# <button class='btn pull-right' href='#'>Add New Product</button> %>
-    </div>
-  </div>
-</div>
-<div class='row-fluid'>
-<div class='span12'>
-  <table class='table table-striped table-bordered cart-detail'>
-    <thead>
-      <tr>
-        <th class='span1'>Product</th>
-        <th class='span3'>Title</th>
-        <th class='span4'>Description</th>
-        <th class='span2'>Price</th>
-        <th class='span2'>Action</th>
-      </tr>
-    </thead>
-    <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= image_tag product.photo.url %></td>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= number_to_currency(product.price_in_dollars) %></td>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
-</div>
-</div>
+<p id="notice"><%= notice %></p>
 
+<% @products.each do |product| %>
+  <p><%= link_to product.title, product_path(product) %></p>
+<% end %>
