fixed breadcrumb view issue

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,12 +1,15 @@
-      <ul class='breadcrumb'>
-        <li>
-          <%= link_to "Home", "/" %>
+      <div class='row-fluid'>
+        <ul class='breadcrumb'>
+          <li>
+            <%= link_to "Home", "/" %>
           <span class='divider'>/</span>
-        </li>
-        <li class='active'>
-          My Account
-        </li>
-      </ul>
+          </li>
+          <li class='active'>
+            My Account
+          </li>
+        </ul>
+      </div>
+
       <div class='row-fluid'>
         <div class='tabbable'>
           <ul class='nav nav-tabs'>
