--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,6 @@
-      <ul class='breadcrumb'>
+
+    <div class='row-fluid'>
+    <ul class='breadcrumb'>
         <li>
           <%= link_to "Home", "/" %>
           <span class='divider'>/</span>
@@ -7,6 +9,8 @@
           My Account
         </li>
       </ul>
+    </div>
+
       <div class='row-fluid'>
         <div class='tabbable'>
           <ul class='nav nav-tabs'>
