--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -135,6 +135,7 @@ body {
   background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
   border: 1px solid #ddd;
   box-shadow: inset 0 1px 0 #ffffff;
+  margin-top: 10px;
 }
 
 .cart_link {
