--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,15 @@
-<ul class='breadcrumb'>
-  <li>
-    <%= link_to "Home", "/" %>
-    <span class='divider'>/</span>
-  </li>
-  <li class='active'>
-    <%= @product.title.titleize %>
-  </li>
-</ul>
+<div class='row-fluid'>
+  <ul class='breadcrumb'>
+    <li>
+      <%= link_to "Home", "/" %>
+      <span class='divider'>/</span>
+    </li>
+    <li class='active'>
+      <%= @product.title.titleize %>
+    </li>
+  </ul>
+</div>
+
 <div class='row-fluid'>
   <div class='span12'>
     <div class='page-header'>
