--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,7 +14,7 @@
   <div class='span12'>
     <div class='page-header'>
       <h1>
-        <%= @product.title.titleize %>
+        <%= @product.title.titleize %> <span class="label label-important">Product Retired!</span>
       </h1>
     </div>
   </div>
@@ -33,6 +33,11 @@
         <h4>Description</h4>
         <p><%= @product.description %></p>
       </div>
+      <div>
+        <% if @product.active == false %>
+        <%= "This product has been retired from our catalogue." %>
+        <% end %>
+      </div><br/>
       <strong>Categories:</strong><br/>
       <% @product.categories.each do |category| %>
       <%= link_to category.name, category_path(category) %>
@@ -43,9 +48,11 @@
         <span class='amount'></span>
       </div>
       <div class='form form-horizontal'>
-        <div class='form-actions'>
-          <%= button_to "Add to Cart", line_items_path(product_id: @product), :class => "btn" %>
-        </div>
+        <% if @product.active %>
+          <div class='form-actions'>
+            <%= button_to "Add to Cart", line_items_path(product_id: @product), :class => "btn" %>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
