--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,7 +21,7 @@
     <div class='detail_photo span3'>
       <div class='thumbnail'>
         <a href='#'>
-          <%= image_tag "product14.png" %>
+          <%= image_tag @product.photo.url %>
         </a>
       </div>
     </div>
