--- a/app/views/admin/dashboards/show.html.erb
+++ b/app/views/admin/dashboards/show.html.erb
@@ -102,11 +102,11 @@
           <td><%= order.current_status %></td>
           <td>
             <% if order.current_status == "pending" %>
-              <%= button_to "Cancel", admin_order_path(order), :method => :put, :class => "btn btn-inverse" %>
+              <%= link_to "Cancel", admin_order_path(order), :method => :put %>
             <% elsif order.current_status == "shipped" %>
-              <%= button_to "Mark as returned", admin_order_path(order), :method => :put, :class => "btn btn-inverse" %>
+              <%= link_to "Mark as returned", admin_order_path(order), :method => :put %>
             <% elsif order.current_status == "paid" %>
-              <%= button_to "Mark as shipped", admin_order_path(order), :method => :put, :class => "btn btn-inverse" %>
+              <%= link_to "Mark as shipped", admin_order_path(order), :method => :put %>
             <% else %>
               <%= "N/A" %>
             <% end %>
