--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -123,11 +123,11 @@
       <% end %>
       <span>
         <% if @order.current_status == "pending" %>
-          <%= button_to "Cancel", admin_order_path(@order), :method => :put, :class => "btn btn-inverse" %>
+          <%= link_to "Cancel", admin_order_path(@order), :method => :put, :class => "btn btn-inverse" %>
         <% elsif @order.current_status == "shipped" %>
-          <%= button_to "Mark as returned", admin_order_path(@order), :method => :put, :class => "btn btn-inverse" %>
+          <%= link_to "Mark as returned", admin_order_path(@order), :method => :put, :class => "btn btn-inverse" %>
         <% elsif @order.current_status == "paid" %>
-          <%= button_to "Mark as shipped", admin_order_path(@order), :method => :put, :class => "btn btn-inverse" %>
+          <%= link_to "Mark as shipped", admin_order_path(@order), :method => :put, :class => "btn btn-inverse" %>
         <% end %>
       </span>
     </div>
