--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,6 +7,7 @@
         <%= f.error_notification %>
         <%= f.input :full_name %>
         <%= f.input :email %>
+        <%= f.input :display_name %>
         <%= f.input :password %>
         <%= f.input :password_confirmation %>
         <%= f.button :submit, :value => "Register", :class => "btn-primary"%>
