--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,37 @@
-<h1> The User's Profile </h1>
+<div class='row-fluid'>
+  <ul class='breadcrumb'>
+    <li>
+      <%= link_to "Home", "/" %>
+    <span class='divider'>/</span>
+    </li>
+    <li class='active'>
+      My Account
+    </li>
+  </ul>
+</div>
+<div class='row-fluid'>
+  <div class='tabbable'>
+    <ul class='nav nav-tabs'>
+      <li class='active'>
+        <%# <a data-toggle='tab' href='#'>Profile</a> %>
+        <%= link_to "Profile", user_path(@user) %>
+      </li>
+      <li >
+        <%# <a data-toggle='tab' href='#'>Past Orders</a> %>
+        <%= link_to "Past Orders", orders_path %>
+      </li>
+    </ul>
+  </div>
+</div>
+<%# <%= render 'form' %1> %>
+
+<p> Full Name </p>
+<p><%= @user.full_name %></p>
+</br>
+
+<p> Email </p>
+<p><%= @user.email %></p>
+</br>
+  
+<p> User Display Name </p>
+<p><%= @user.display %></p>
