--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,7 +7,7 @@
   <li class="active">
     <li>
     <%= link_to 'All Products', products_path %>
-  </li> / 
+  </li> /
   <li><%= @category.name %>
   </li>
 </ul>
@@ -23,10 +23,11 @@
   <div class="row-fluid">
     <div class="thumbnails product_list">
       <% @category.products.each do |product| %>
+      <% if product.active %>
       <li class="span3">
         <div class="thumbnail">
           <%= link_to product_path(product) do %>
-          <%= image_tag product.photo.url %> 
+          <%= image_tag product.photo.url %>
           <% end %>
           <div class="caption">
             <p><%= link_to product.title, product_path(product) %></p>
@@ -34,6 +35,7 @@
           </div>
         </div>
       </li>
+      <% end %>
       <% end %>
     </div>
   </div>
