fixed notification css issues

--- a/app/views/shared/_sub_menu.html.erb
+++ b/app/views/shared/_sub_menu.html.erb
@@ -1,6 +1,5 @@
+<div class="row-fluid">
 <% if categories %>
-<div class='row-fluid'>
-
   <div class='span12 nav-menus'>
     <ul class='nav nav-pills'>
       <li>
@@ -13,5 +12,5 @@
       <% end %> 
     </ul>
   </div>
-</div>
 <% end %>
+</div>
