--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,3 +1,4 @@
+  <div class='row-fluid'>
     <ul class='breadcrumb'>
         <li>
           <%= link_to "Home", "/" %>
@@ -7,6 +8,7 @@
           Cart
         </li>
       </ul>
+    </div>
       <div class='row-fluid'>
         <div class='span12'>
           <div class='page-header'>
