--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<div class='row-fluid'>
  <ul class="breadcrumb">
   <li>
     <span class="divider"><!----></span>
@@ -11,6 +12,7 @@
   <li><%= @category.name %>
   </li>
 </ul>
+</div>
 
 <div class="row-fluid">
   <div class="span12">
