--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -75,7 +75,7 @@
               <% @order.line_items.each do |line_item| %>
               <tr>
                 <td>
-                  <%= image_tag "product14.png" %>
+                  <%= image_tag line_item.product.photo.url %>
                 </td>
                 <td class='description'>
                   <span class='name'>
