--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -11,7 +11,7 @@
 <%# </div> %>
 
 <h3>Order Total:</h3>
-<h3><%= number_to_currency @cart.total_price %></h3> 
+<h3><%= number_to_currency current_cart.total_price %></h3> 
 
 <%= form_for(@order) do |f| %>
   <% if @order.errors.any? %>
