--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -88,8 +88,6 @@ body {
         font-weight: normal;
       }
     }
-      
-
   }
 
   .status {
@@ -190,7 +188,6 @@ body {
     padding-left: 40px;
   }
 }
-
 .cart_sidebar {
   @include product_detail_header;
 
@@ -260,7 +257,33 @@ form.bs-container {
    }
 }
 
+ul.profile {
+  list-style-type: none;
+  margin-left: 7px;
 
+
+  li {
+    div {
+      float: left;
+
+      p {
+        display: inline; 
+      }
+      p.header {
+        font-weight: bold;
+      }
+      a {
+        font-weight: bold; 
+      }
+    }
+  }
+}
+.navbar .nav li {
+  p {
+    padding: 10px 15px 10px; 
+    font-weight: bold;
+  }
+}
 .footer { 
 
   h3 {
