added email capability

--- a/app/views/user_mailer/order_confirmation_email.html.erb
+++ b/app/views/user_mailer/order_confirmation_email.html.erb
@@ -7,7 +7,7 @@
 <h1>Order Confirmation</h1>
 
 <p>
-Order number: <%= @user.order.id %>
+Order number: <%= @user.orders.last.id %>
 </p>
 <p>
 Your order has been recieved!
