--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,6 +37,12 @@
     </li>
     <li>
       <div class="span8"> 
+        <p class="span3 header"> Display Name </p>
+        <p class="span5"><%= @user.display_name %></p>
+      </div>
+    </li>
+    <li>
+      <div class="span8"> 
         <p class="span3 header"> Phone </p>
         <p class="span5"><%= @user.try(:phone) %></p>
       </div>
