updated nested model logic to make code more verbose

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -27,9 +27,9 @@
   <%= f.input :email %>
   <%= f.input :display_name %>
 
-  <%= f.simple_fields_for :phone_number_attributes, @user.phone_number do |p| %>
+  <%= f.simple_fields_for :phone_number do |p| %>
     <%= p.input :phone %>
-    <%= p.input :receive_sms, label: "Recieve SMS?", as: :radio_buttons, :item_wrapper_class => 'inline' %>
+    <%= p.input :receive_sms, label: "Receive SMS?", as: :radio_buttons, :item_wrapper_class => 'inline' %>
   <% end %>
 
   <%= f.input :password %>
