--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,4 +1,4 @@
-
+<h1><%= current_tenant.name %> Store</h1>
 <div class='row-fluid'>
   <div class='span12'></div>
   <div class='carousel slide' id='myCarousel'>
