--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -5,6 +5,7 @@
       = link_to "Already registered? Log in here", login_path, :class => 'text-center'
       = simple_form_for [:admin, @user], :html => { :class => 'bs-container' } do |f|
         = f.error_notification
+        = f.input :store_name
         = f.input :full_name
         = f.input :email
         = f.input :display_name
