--- a/app/views/static_pages/_form.html.haml
+++ b/app/views/static_pages/_form.html.haml
@@ -1,7 +1,7 @@
-= simple_form_for @tenant, :html => { :class => 'bs-container' } do |f|
+= simple_form_for @store, :html => { :class => 'bs-container' } do |f|
   = f.error_notification
   = f.input :name
-  = f.simple_fields_for :user_attributes, @tenant.user do |u|
+  = f.simple_fields_for :user_attributes, @store.user do |u|
     = u.input :full_name
     = u.input :email
     = u.input :display_name
