new store redirects to the correct admin dashboard

--- a/app/views/stores/new.html.haml
+++ b/app/views/stores/new.html.haml
@@ -6,6 +6,7 @@
       = simple_form_for @store do |f|
         = f.error_notification
         = f.input :name, :label => "Store Name"
+        = f.input :path
         =f.simple_fields_for :users do |u|
           = u.input :full_name
           = u.input :email
