added store_id column to categories, set seeds up to assign stories to categories

--- a/app/views/admin/categories/index.html.haml
+++ b/app/views/admin/categories/index.html.haml
@@ -17,6 +17,6 @@
           %tr
             %td= category.name
             %td
-              = link_to "Edit", edit_admin_category_path(category)
+              = link_to "Edit", edit_admin_category_path(category.store, category)
               |
-              = link_to "Delete", admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' }
+              = link_to "Delete", admin_category_path(category.store, category), method: :delete, data: { confirm: 'Are you sure?' }
