added the store id to carts

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -15,9 +15,9 @@
       - if product.active
         %li.span3
           .thumbnail
-            = link_to product_path(product) do
+            = link_to product_path(product.store, product) do
               = image_tag product.photo.url
             .caption
-              %h5= link_to product.title, product_path(product)
+              %h5= link_to product.title, product_path(product.store, product)
               %p= number_to_currency(product.price_in_dollars)
   / = paginate @products
