view/cart/controller stuff

--- a/app/views/carts/_cart.html.haml
+++ b/app/views/carts/_cart.html.haml
@@ -1,15 +1,15 @@
-%h2 Your Cart
-%table
-  = render(cart.line_items)
-  %tr.total_line
-    %td{:colspan => "2"} Total
-    %td.total_cell= number_to_currency(cart.total_price)
-- if cart.line_items.count >= 1
-  - cart.line_items.each do |li|
-    = button_to "+", add_quantity_to_cart_path(li.product_id), :method => :put
-    = button_to "-", decrease_quantity_from_cart_path(li.product_id), :method => :put
-  = button_to "Checkout", {:controller => "orders", :action => "new"}, :method => :get
-  = button_to 'Empty cart', cart, method: :delete, |
-    data: { confirm: 'Are you sure?' }             |
-- else
-  Put something in your cart!!
+/ %h2 Your Cart
+/ %table
+/   = render(cart.line_items)
+/   %tr.total_line
+/     %td{:colspan => "2"} Total
+/     %td.total_cell= number_to_currency(cart.total_price)
+/ - if cart.line_items.count >= 1
+/   - cart.line_items.each do |li|
+/     = button_to "+", add_quantity_to_cart_path(li.product_id), :method => :put
+/     = button_to "-", decrease_quantity_from_cart_path(li.product_id), :method => :put
+/   = button_to "Checkout", {:controller => "orders", :action => "new"}, :method => :get
+/   = button_to 'Empty cart', cart, method: :delete, |
+/     data: { confirm: 'Are you sure?' }             |
+/ - else
+/   Put something in your cart!!
