--- a/app/views/shared/_brand_header.html.haml
+++ b/app/views/shared/_brand_header.html.haml
@@ -7,9 +7,10 @@
     .span6
       .cart_link.pull-right
         %span
-        = current_cart.inspect
-        = session.inspect
+        = "current cart: #{current_cart.inspect}"
+        = "current session: #{session.inspect}"
         = "current_store: #{current_store.inspect}"
+
         - if current_cart.store == current_store
           = "hello"
         - else
