--- a/app/views/shared/_brand_header.html.haml
+++ b/app/views/shared/_brand_header.html.haml
@@ -7,14 +7,14 @@
     .span6
       .cart_link.pull-right
         %span
-        = "current cart: #{current_cart.inspect}"
-        = "current session: #{session.inspect}"
-        = "current_store: #{current_store.inspect}"
+        / = "current cart: #{current_cart.inspect}"
+        / = "current session: #{session.inspect}"
+        / = "current_store: #{current_store.inspect}"
 
-        - if current_cart.store == current_store
-          = "hello"
-        - else
-          = "no cart for you"
+        / - if current_cart.store == current_store
+        /   = "hello"
+        / - else
+        /   = "no cart for you"
         / only show the cart if the current_cart.store == store_id
 
         /   - if current_cart && !admin_user
