--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -10,6 +10,8 @@
           = current_user.inspect
           - if current_user
             Welcome #{current_user.inspect}!
+          - if current_user
+            %b Welcome #{User.find(current_user).full_name}!
             %li= link_to "My Account", user_path(current_user)
             %li= link_to "Logout", logout_path
           - else
@@ -17,4 +19,4 @@
             %li= link_to "Sign Up", new_user_path
 
         %ul.nav.pull-right
-          %li= link_to "My Cart", cart_path(current_store, current_cart)
+          / %li= link_to "My Cart", cart_path(current_store, current_cart)
