--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -21,3 +21,12 @@
         %br
         = f.submit "Register", :class => "btn-primary"
       
+      
+      = render 'form'
+
+      - if current_user.nil?
+        - session[:return_to] = root_path
+      - elsif request.referrer == "http://localhost:3000/users/new"
+        - session[:return_to] = edit_user_path(current_user)
+      - else
+        - session[:return_to] = request.referrer
