--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,6 +10,7 @@
     %ul.nav.nav-tabs
       %li.active
         = link_to "Profile", customer_path(@customer)
+        = link_to "Profile", user_path(@user)
       %li
         = link_to "Past Orders", orders_path
 .row-fluid
@@ -37,3 +38,23 @@
     %li
       .span8
         = link_to "Update Profile", edit_customer_path(@customer)
+        %p.span5= @user.full_name
+    %li
+      .span8
+        %p.span3.header Email
+        %p.span5= @user.email
+    %li
+      .span8
+        %p.span3.header Display Name
+        %p.span5= @user.display_name
+    / %li
+    /   .span8
+    /     %p.span3.header Phone
+    /     %p.span5= @user.try(:phone)
+    / %li
+    /   .span8
+    /     %p.span3.header Receive SMS Alerts
+    /     %p.span5= @user.try(:receive_sms?)
+    %li
+      .span8
+        = link_to "Update Profile", edit_user_path(@user)
