--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -10,22 +10,21 @@
     %ul.nav.nav-tabs
       %li.active
         = link_to "Profile", @customer
-      %li
-        = link_to "Past Orders", orders_path
-= simple_form_for @customer do |f|
-        = link_to "Profile", @user
-      / %li
-      /   = link_to "Past Orders", orders_path
-= simple_form_for @user do |f|
-  = f.error_notification
-  = f.input :full_name
-  = f.input :email
-  = f.input :display_name
-  = f.simple_fields_for :phone_number do |p|
-    = p.input :phone
-    = p.input :receive_sms, label: "Receive SMS?", as: :radio_buttons, :item_wrapper_class => 'inline'
-  = f.input :password
-  = f.input :password_confirmation
-  = f.error :base
-  %div
-    = f.button :submit, :value => "Update Profile", :class => "btn-primary"
+  = render 'form'
+/ = simple_form_for @customer do |f|
+/   = link_to "Profile", @user
+/       / %li
+/       /   = link_to "Past Orders", orders_path
+/   = simple_form_for @user do |f|
+/     = f.error_notification
+/     = f.input :full_name
+/     = f.input :email
+/     = f.input :display_name
+/     = f.simple_fields_for :phone_number do |p|
+/       = p.input :phone
+/       = p.input :receive_sms, label: "Receive SMS?", as: :radio_buttons, :item_wrapper_class => 'inline'
+/     = f.input :password
+/     = f.input :password_confirmation
+/     = f.error :base
+/     %div
+/     = f.button :submit, :value => "Update Profile", :class => "btn-primary"
